# pocket-aquarium

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  Readme.md  compile.bat
.cache/clangd/index/: background.c.0A3AE755C49F1176.idx  background.h.99B230CE0ADE01FF.idx  blank_tile.c.81DF0646A3A359F4.idx  blank_tile.h.34688A5D7053413F.idx  coin.c.B8803476825DF85E.idx  coin.h.3B855E47491D7742.idx  coin_sprite.c.CE322189C0CE8B42.idx  coin_sprite.h.CB37DEBCFB2CAE3C.idx  cursor.c.FFB9BDE647F6A596.idx  cursor.h.9EDD43DD2D0C5398.idx  cursor_sprite.c.0AEA144BE1EA0A7D.idx  cursor_sprite.h.6F5C446BAC6F14C6.idx  fish.c.02D8708AD6D74B46.idx  fish.h.BEE2C34BAE8944B0.idx  food.c.69029CFCA6ED4116.idx  food.h.595EA42159DC82C1.idx  food_sprite.c.E3ADDBE00976EBC6.idx  food_sprite.h.A1E8A211B11D0946.idx  guppy_sprite.c.4B271EA1A2107A84.idx  guppy_sprite.h.58EA5BB6F710C8D4.idx  main.c.1C855F5AAB2A3A64.idx  utils.h.263BBD3913884D82.idx
.github/workflows/: build.yml
assests/aseprite/: coin_sprite.aseprite  cursor_sprite.aseprite  food_sprite.aseprite  guppy_sprite.aseprite  hungry_guppy_sprite.aseprite  numbers.aseprite  symbols.aseprite
res/: background.c  background.h  blank_tile.c  blank_tile.h  coin_sprite.c  coin_sprite.h  cursor_sprite.c  cursor_sprite.h  food_sprite.c  food_sprite.h  guppy_sprite.c  guppy_sprite.h  hungry_guppy_sprite.c  hungry_guppy_sprite.h  numbers.c  numbers.h  symbols.c  symbols.h
src/: coin.c  coin.h  cursor.c  cursor.h  fish.c  fish.h  food.c  food.h  game_screen.h  main.c  score.c  score.h  utils.c  utils.h
utils/spritegen/: go.mod  main.go  tiles.go
